# nohands

./: .gitignore  PKGBUILD  example.config.toml  pyproject.toml
.github/workflows/: makepkg.yaml
nohands/: cli.py  config.py  git.py  types.py  watcher.py
