[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nohands"
version = "0.1.0"
description = "dev automation utilities"
authors = [
    { name = "Jesse Conis", email = "me@jesseconis.io" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygit2>=1.16.0",
    "watchfiles>=0.24.0",
    "typer>=0.12.3",
    "tomli>=2.0.1",
]

[tool.setuptools]
packages = ["nohands"]

